files/block-all-traffic.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all-traffic-database
  namespace: database-namespace
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all-traffic-spring
  namespace: backend-namespace
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all-dev-traffic
  namespace: dev-namespace
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all-prod-traffic
  namespace: prod-namespace
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
